--- a/sctnet/res/layout/work_experience_edit_activity.xml
+++ b/sctnet/res/layout/work_experience_edit_activity.xml
@@ -162,6 +162,7 @@
                 android:paddingRight="10dp"
                 android:digits="1234567890"
                 android:inputType="number"
+                android:layout_marginRight="5dp"
                 android:text="" />
         </LinearLayout>
         <RelativeLayout
