--- a/sctnet/res/layout/work_performance_edit_activity.xml
+++ b/sctnet/res/layout/work_performance_edit_activity.xml
@@ -5,15 +5,17 @@
     android:layout_height="fill_parent"
     android:background="@color/background"
     android:orientation="vertical" >
+
     <EditText
         android:id="@+id/workperformance_edit"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:gravity="top"
+        android:layout_margin="10dp"
         android:background="@drawable/search_edittext_bg"
+        android:gravity="top"
         android:hint="@string/work_performance_hint"
+        android:maxLength="5000"
         android:padding="10dp"
-        android:maxLength="5000" 
         android:textColor="#3B3B3B"
         android:textSize="16dp" />
 
