--- a/sctnet/res/layout/contact_way_edit_activity.xml
+++ b/sctnet/res/layout/contact_way_edit_activity.xml
@@ -6,11 +6,11 @@
     android:background="@color/background"
     android:orientation="vertical" >
 
-    <LinearLayout 
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
-       
+
         <LinearLayout
             android:id="@+id/contactsname"
             android:layout_width="fill_parent"
@@ -19,10 +19,10 @@
             android:layout_marginRight="15dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/item_selector"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:focusable="true"  
-   			android:focusableInTouchMode="true" >
+            android:orientation="horizontal" >
 
             <TextView
                 android:id="@+id/contactsname_text"
@@ -30,19 +30,18 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:textColor="@color/lightBlack"
-                android:text="第二联系人" />
+                android:text="第二联系人"
+                android:textColor="@color/lightBlack" />
 
             <EditText
                 android:id="@+id/contactsname_value"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
                 android:background="@drawable/my_edittext"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
                 android:text="" />
         </LinearLayout>
-        
+
         <LinearLayout
             android:id="@+id/contactsphone"
             android:layout_width="fill_parent"
@@ -51,10 +50,10 @@
             android:layout_marginRight="15dp"
             android:layout_marginTop="1dp"
             android:background="@drawable/item_selector"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:focusable="true"  
-   			android:focusableInTouchMode="true" >
+            android:orientation="horizontal" >
 
             <TextView
                 android:id="@+id/contactsphone_text"
@@ -62,19 +61,19 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:textColor="@color/lightBlack"
-                android:text="第二联系人电话" />
+                android:text="第二联系人电话"
+                android:textColor="@color/lightBlack" />
 
             <EditText
                 android:id="@+id/contactsphone_value"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
                 android:background="@drawable/my_edittext"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
+                android:inputType="phone"
                 android:text="" />
         </LinearLayout>
-        
+
         <LinearLayout
             android:id="@+id/userphone"
             android:layout_width="fill_parent"
@@ -83,10 +82,10 @@
             android:layout_marginRight="15dp"
             android:layout_marginTop="1dp"
             android:background="@drawable/item_selector"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:focusable="true"  
-   			android:focusableInTouchMode="true" >
+            android:orientation="horizontal" >
 
             <TextView
                 android:id="@+id/userphone_text"
@@ -94,29 +93,30 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingRight="5dp"
+                android:text="*"
                 android:textColor="@color/red"
                 android:textSize="18dp"
-                android:textStyle="bold"
-                android:text="*" />
+                android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/userphone_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="1dp"
                 android:paddingRight="10dp"
-                android:textColor="@color/lightBlack"
-                android:text="本人电话" />
+                android:text="本人电话"
+                android:textColor="@color/lightBlack" />
 
             <EditText
                 android:id="@+id/userphone_value"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
                 android:background="@drawable/my_edittext"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
+                android:inputType="phone"
                 android:text="" />
         </LinearLayout>
-        
+
         <LinearLayout
             android:id="@+id/email"
             android:layout_width="fill_parent"
@@ -125,10 +125,10 @@
             android:layout_marginRight="15dp"
             android:layout_marginTop="1dp"
             android:background="@drawable/item_selector"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:focusable="true"  
-   			android:focusableInTouchMode="true" >
+            android:orientation="horizontal" >
 
             <TextView
                 android:id="@+id/email_text"
@@ -136,20 +136,21 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:textColor="@color/lightBlack"
-                android:text="邮箱" />
+                android:text="邮箱"
+                android:textColor="@color/lightBlack" />
 
             <EditText
                 android:id="@+id/email_value"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
                 android:background="@drawable/my_edittext"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
+                android:inputType="textEmailAddress"
                 android:text="" />
         </LinearLayout>
-        
-       <!--  <LinearLayout
+
+        <!--
+        <LinearLayout
             android:id="@+id/postalcode"
             android:layout_width="fill_parent"
             android:layout_height="55dp"
@@ -179,8 +180,10 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:text="" />
-        </LinearLayout> -->
-       <LinearLayout
+        </LinearLayout>
+        -->
+
+        <LinearLayout
             android:id="@+id/qqmsn"
             android:layout_width="fill_parent"
             android:layout_height="55dp"
@@ -188,10 +191,10 @@
             android:layout_marginRight="15dp"
             android:layout_marginTop="1dp"
             android:background="@drawable/item_selector"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:focusable="true"  
-   			android:focusableInTouchMode="true" >
+            android:orientation="horizontal" >
 
             <TextView
                 android:id="@+id/qqmsn_text"
@@ -199,19 +202,18 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:textColor="@color/lightBlack"
-                android:text="QQ号" />
+                android:text="QQ号"
+                android:textColor="@color/lightBlack" />
 
             <EditText
                 android:id="@+id/qqmsn_value"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
                 android:background="@drawable/my_edittext"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
+                android:inputType="numberDecimal"
                 android:text="" />
         </LinearLayout>
     </LinearLayout>
-
 
 </ScrollView>
