--- a/sctnet/res/layout/edit_basic_info_activity.xml
+++ b/sctnet/res/layout/edit_basic_info_activity.xml
@@ -448,6 +448,7 @@
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="1dp"
+            android:layout_marginBottom="20dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:background="@drawable/item_selector"
