--- a/sctnet/res/layout/job_intention_edit_activity.xml
+++ b/sctnet/res/layout/job_intention_edit_activity.xml
@@ -304,8 +304,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/my_edittext"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
+                android:layout_marginRight="5dp"
                 android:text="" />
         </LinearLayout>
        
