--- a/sctnet/res/layout/select_jobexp_activity.xml
+++ b/sctnet/res/layout/select_jobexp_activity.xml
@@ -729,6 +729,9 @@
             <EditText
                 android:id="@+id/et_opinion"
                 android:layout_width="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="20dp"
                 android:layout_height="80dp"
                 android:layout_below="@id/tv_opinion"
                 android:padding="10dp"
