--- a/sctnet/res/layout/work_experience_edit_activity.xml
+++ b/sctnet/res/layout/work_experience_edit_activity.xml
@@ -193,6 +193,9 @@
                 android:gravity="right"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
+                android:singleLine="true"
+                android:maxEms="10"
+                android:ellipsize="end"
                 android:text="" />
 
             <ImageView
