--- a/sctnet/res/layout/personal_center_activity.xml
+++ b/sctnet/res/layout/personal_center_activity.xml
@@ -13,7 +13,9 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="15dip"
         android:layout_marginTop="15.0dip"
-        android:scrollbars="none" >
+        android:scrollbars="none" 
+        android:visibility="invisible"
+        >
 
         <RelativeLayout
             android:id="@+id/relativeLayout"
