--- a/sctnet/res/layout/subscribe_activity.xml
+++ b/sctnet/res/layout/subscribe_activity.xml
@@ -38,7 +38,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp" />
+        android:layout_marginBottom="10dp"
+        android:visibility="gone"         />
   <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
