--- a/sctnet/res/layout/recruitment_list_activity.xml
+++ b/sctnet/res/layout/recruitment_list_activity.xml
@@ -9,19 +9,22 @@
              android:id="@+id/recruitment_search"
              android:layout_width="wrap_content"  
              android:layout_height="wrap_content"  
-             android:layout_margin="20dip"
+             android:layout_margin="10dip"
               >
 
-          <EditText 
-             android:id="@+id/search_edit_bg"
-             android:layout_width="fill_parent"
-	         android:layout_height="wrap_content" 
-             android:background="@drawable/search_bg"
-             android:hint="@string/homeactivityhint"
-             android:gravity="center_vertical"
-              android:paddingLeft="20dip"
-              
-              android:singleLine="true"
+           <EditText 
+             android:id="@+id/et_search_searchtxt"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/search_edittext_bg"
+            android:hint="@string/search_hint"
+            android:paddingTop="10dp"
+            android:paddingLeft="10dip"
+            android:paddingBottom="10dp"
+            android:singleLine="true"
+            android:textColor="#555"
+            android:textColorHint="#999"
+            android:textSize="15dp" 
                />  
                
               <ImageView 
@@ -32,7 +35,7 @@
 	        android:paddingLeft="15dp"
 	        android:paddingRight="15dp"
 	        android:layout_centerVertical="true"
-	        android:layout_alignRight="@+id/search_edit_bg"  
+	        android:layout_alignRight="@+id/et_search_searchtxt"  
 	        android:background="@drawable/search_bar"
         /> 
          </RelativeLayout>
