--- a/sctnet/res/layout/information_detail.xml
+++ b/sctnet/res/layout/information_detail.xml
@@ -4,32 +4,38 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/background" >
-   
-   <ScrollView 
-       android:id="@+id/sv_scroll"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:orientation="vertical"
-       android:background="@color/white"
-       android:layout_marginLeft="10dp"
-       android:layout_marginRight="10dp"
-       >
-       <LinearLayout 
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:orientation="vertical">
-       <ImageView 
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:background="@drawable/information_detail_img"/>
-       <TextView 
-           android:id="@+id/information_detail_text"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:layout_marginTop="20dp"
-           android:textSize="16dp"
-           android:textColor="@color/lightBlack"
-           />
-       </LinearLayout>
-</ScrollView>
+
+    <ScrollView
+        android:id="@+id/sv_scroll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:visibility="invisible" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/information_detail_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:textColor="@color/blue"
+                android:textSize="19sp" />
+
+            <TextView
+                android:id="@+id/information_detail_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:padding="5dp"
+                android:textColor="@color/lightBlack"
+                android:textSize="16sp" />
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
