--- a/sctnet/res/layout/job_intention_edit_activity.xml
+++ b/sctnet/res/layout/job_intention_edit_activity.xml
@@ -118,7 +118,7 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:textColor="@color/lightBlack"
-                android:text="预从事行业" />
+                android:text="欲从事行业" />
 
             <TextView
                 android:id="@+id/workmanner_value"
@@ -162,7 +162,7 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:textColor="@color/lightBlack"
-                android:text="预从事岗位" />
+                android:text="欲从事岗位" />
 
             <TextView
                 android:id="@+id/post_value"
