--- a/sctnet/res/layout/login_activity.xml
+++ b/sctnet/res/layout/login_activity.xml
@@ -6,14 +6,6 @@
     android:background="@color/background"
     android:orientation="vertical" >
 
-    <LinearLayout
-        android:id="@+id/login_useless_layout"
-        android:layout_width="0px"
-        android:layout_height="0px"
-        android:focusable="true"
-        android:focusableInTouchMode="true" >
-    </LinearLayout>
-
     <RelativeLayout
         android:id="@+id/login_relative_layout1"
         android:layout_width="fill_parent"
@@ -39,6 +31,7 @@
                 android:background="@null"
                 android:drawableLeft="@drawable/user_name_img"
                 android:drawablePadding="10dp"
+                android:focusableInTouchMode="false"
                 android:hint="@string/username_hint"
                 android:padding="10dp"
                 android:singleLine="true" />
@@ -68,6 +61,7 @@
         </LinearLayout>
     </RelativeLayout>
 
+    <!--
     <RelativeLayout
         android:id="@+id/login_relative_layout2"
         android:layout_width="fill_parent"
@@ -75,7 +69,8 @@
         android:layout_marginLeft="15.0dip"
         android:layout_marginRight="15.0dip"
         android:layout_marginTop="10.0dip"
-        android:paddingBottom="10.0dip" >
+        android:paddingBottom="10.0dip"
+         >
 
         <CheckBox
             android:id="@+id/login_remember_password"
@@ -97,6 +92,7 @@
             android:paddingLeft="20dip"
             android:text="@string/auto_login" />
     </RelativeLayout>
+    -->
 
     <Button
         android:id="@+id/login_btn_login"
@@ -115,31 +111,34 @@
         android:text="@string/login"
         android:textColor="#ffffff"
         android:textSize="18sp" />
-<RelativeLayout
+
+    <RelativeLayout
         android:id="@+id/login_relative_layout3"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dip"
         android:layout_marginRight="20dip"
-        android:layout_marginTop="30dip" >    
-    <Button
-        android:id="@+id/forget_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:background="#00000000"
-        android:text="@string/forgetPassword"
-        android:textColor="@drawable/btn_text_color" />
+        android:layout_marginTop="30dip" >
 
-    <Button
-        android:id="@+id/register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/forget_password"
-        android:layout_alignBottom="@+id/forget_password"
-        android:background="#00000000"
-        android:text="@string/registerNow"
-        android:textColor="@drawable/btn_text_color" />
-</RelativeLayout>
+        <Button
+            android:id="@+id/forget_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:background="#00000000"
+            android:text="@string/forgetPassword"
+            android:textColor="@drawable/btn_text_color" />
+
+        <Button
+            android:id="@+id/register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/forget_password"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/forget_password"
+            android:background="#00000000"
+            android:text="@string/registerNow"
+            android:textColor="@drawable/btn_text_color" />
+    </RelativeLayout>
+
 </LinearLayout>
