--- a/sctnet/res/layout/more_activity.xml
+++ b/sctnet/res/layout/more_activity.xml
@@ -71,7 +71,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/rl_update"
         android:layout_gravity="center_horizontal"
-        android:background="@drawable/setting_bg_down"
+        android:background="@drawable/setting_bg_mid"
         android:clickable="true"
         android:paddingBottom="10dip"
         android:paddingTop="10dip" >
@@ -85,6 +85,31 @@
             android:layout_marginLeft="20dip"
             android:gravity="center_vertical"
             android:text="关于"
+            android:textColor="#ff000000"
+            android:textSize="17.0dip"
+            android:textStyle="bold" />
+    </RelativeLayout>
+    
+    <RelativeLayout
+        android:id="@+id/rl_logout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/rl_about"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/setting_bg_down"
+        android:clickable="true"
+        android:paddingBottom="10dip"
+        android:paddingTop="10dip"
+         >
+
+        <!-- 退出 -->
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dip"
+            android:gravity="center_vertical"
+            android:text="退出登录"
             android:textColor="#ff000000"
             android:textSize="17.0dip"
             android:textStyle="bold" />
