--- a/sctnet/res/layout/pinned_header_listview_item.xml
+++ b/sctnet/res/layout/pinned_header_listview_item.xml
@@ -34,6 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:button="@drawable/common_checkbox" 
+            android:layout_gravity="center"
             />
 
         <TextView
