--- a/sctnet/res/layout/select_area_item.xml
+++ b/sctnet/res/layout/select_area_item.xml
@@ -3,7 +3,6 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/background"
-    android:gravity="center_vertical"
     android:orientation="horizontal"
     >
    
@@ -20,19 +19,15 @@
         android:textSize="16dp"
         android:textColor="@color/black"
         />
-	<!-- <ImageView
+	<ImageView
         android:id="@+id/image"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
-        android:layout_alignTop="@+id/area"
         android:contentDescription="@null"
-        android:shadowColor="#ffffffff"
-        android:shadowDx="0.0"
-        android:shadowDy="1.0"
-        android:shadowRadius="1.0"
-        android:src="@drawable/arrow" /> -->
+        android:src="@drawable/check"
+        android:visibility="visible"
+         />
 
 </RelativeLayout>
