--- a/sctnet/res/layout/select_area_item.xml
+++ b/sctnet/res/layout/select_area_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="wrap_content"
     android:background="@color/background"
     android:orientation="horizontal"
     >
@@ -26,8 +26,9 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
         android:contentDescription="@null"
+		android:layout_centerVertical="true"
         android:src="@drawable/check"
-        android:visibility="visible"
+        android:visibility="invisible"
          />
 
 </RelativeLayout>
